  * AtomGroup now are pickled/unpickled without looking for its anchored
    Universe (PR #2893)
  * ensure that unistd.h is included on macOS when compiling ENCORE's spe.c
    (Issue #2934)
  * Fix tests for analysis.bat that could fail when run in parallel and that
    would create a test artifact (Issue #2979, PR #2981)
  * Fix syntax warning over comparison of literals using is (Issue #3066)

Enhancements
  * Added guessers for aromaticity and Gasteiger partial charges (Issue #2468,
    PR #2926)
  * Added `Results` class for storing analysis results (#3115, PR #3233)
  * Added intra_bonds, intra_angles, intra_dihedrals etc. to return only
    the connections involving atoms within the AtomGroup, instead of
    including atoms outside the AtomGroup (Issue #1264, #2821, PR #3200)
  * Added del_TopologyAttr function (PR #3069)
  * Switch GNMAnalysis to AnalysisBase (Issue #3243)
  * Adds python 3.9 support (Issue #2974, PR #3027, #3245)
  * Added an MDAnalysis shields.io badge to the README (Issue #3227, PR #3229)
  * Added sort method to the atomgroup (Issue #2976, PR #3188)
  * ITPParser now reads [ atomtypes ] sections in ITP files, used for charges
    and masses not defined in the [ atoms ] sections
  * Add `set_dimensions` transformation class for setting constant
    box dimensions for all timesteps in trajectory (Issue #2691)
  * Added a ValueError raised when not given a gridcenter while
    providing grid dimensions to DensityAnalysis, also added
    check for NaN in the input (Issue #3148, PR #3154)
  * Read TPR files from Gromacs 2021 (Issue #3180)
  * Adds preliminary support for the ppc64le platform with minimal
    dependencies (Issue #3127, PR #3149)
  * Caches can now undergo central validation at the Universe level, opening
    the door to more useful caching. Already applied to fragment caching
    (Issue #2376, PR #3135)
  * Code for operations on compounds refactored, centralized and optimized for
    performance (Issue #3000, PR #3005)